# voxel

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: app.h  config.h  debug.h  endianness.h
include/gfxm/: camera.h  constants.h  gfxm.h  matrix.h
include/mgr/: chunkstore.h  manager.h  sharedstate.h  threadpool.h
include/models/: block.h  chunk.h
include/render/: chunk.h  image.h  renderer.h  vertexarray.h
include/worldgen/: generator.h
src/: debug.cpp  main.cpp
src/gfxm/: camera.cpp
src/mgr/: chunkstore.cpp  manager.cpp  threadpool.cpp
src/render/: image.cpp  renderer.cpp  vertexarray.cpp
src/worldgen/: generator.cpp
